[package]
name = "pyciff"
version = "0.2.0"
authors = ["Michal Siedlaczek <siedlaczek@pm.me>", "Joel Mackenzie <joelmmackenzie@gmail.com>"]
edition = "2018"

[lib]
name = "pyciff"
crate-type = ["cdylib"]

[dependencies]
ciff = "0.2.0"
pyo3 = { version = "0.13", features = ["extension-module"] }

[package.metadata.maturin]
classifier=[
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
